--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <html>
 	<head>
 		<title>Michael</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"><link href="Styles/bootstrap-responsive.css" rel="stylesheet" type="text/css" />
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -162,10 +163,14 @@
 			<h2> Photos </h2>
 			<div class="carousel horizontal">
 			    <div class="items">
-			        <img class="item" src="images/p (1).jpg" />
-			        <img class="item" src="images/p (2).jpg" />
-			        <img class="item" src="images/p (3).jpg" />
-			        <img class="item" src="images/p (6).jpg" />
+			        <img class="item" src="images/p (1).jpg" width="400"/>
+			        <img class="item" src="images/p (2).jpg" width="400"/>
+			        <img class="item" src="images/p (3).jpg" width="400"/>
+			        <img class="item" src="images/p (5).jpg" width="400"/>
+			        <img class="item" src="images/p (6).jpg" width="400"/>
+			        <img class="item" src="images/p (7).jpg" width="400"/>
+			        <img class="item" src="images/p (8).jpg" width="400"/>
+			        <img class="item" src="images/p (9).jpg" width="400"/>
 			     </div>
 			</div>
 		</section>
