--- a/index.html
+++ b/index.html
@@ -161,17 +161,19 @@
 
 		<section id="cta">
 			<h2> Photos </h2>
-			<div class="carousel horizontal">
-			    <div class="items">
-			        <img class="item" src="images/p (1).jpg" width="400"/>
-			        <img class="item" src="images/p (2).jpg" width="400"/>
-			        <img class="item" src="images/p (3).jpg" width="400"/>
-			        <img class="item" src="images/p (5).jpg" width="400"/>
-			        <img class="item" src="images/p (6).jpg" width="400"/>
-			        <img class="item" src="images/p (7).jpg" width="400"/>
-			        <img class="item" src="images/p (8).jpg" width="400"/>
-			        <img class="item" src="images/p (9).jpg" width="400"/>
-			     </div>
+			<div class = "view">
+				<div class="carousel horizontal">
+				    <div class="items">
+				        <a href="images/p (1).jpg"><img class="item" src="images/p (1).jpg" width="300"/>
+				        <a href="images/p (2).jpg"><img class="item" src="images/p (2).jpg" width="300"/>
+				        <a href="images/p (3).jpg"><img class="item" src="images/p (3).jpg" width="300"/>
+				        <a href="images/p (5).jpg"><img class="item" src="images/p (5).jpg" width="300"/>
+				        <a href="images/p (6).jpg"><img class="item" src="images/p (6).jpg" width="300"/>
+				        <a href="images/p (7).jpg"><img class="item" src="images/p (7).jpg" width="300"/>
+				        <a href="images/p (8).jpg"><img class="item" src="images/p (8).jpg" width="300"/>
+				        <a href="images/p (9).jpg"><img class="item" src="images/p (9).jpg" width="300"/>
+				     </div>
+				</div>
 			</div>
 		</section>
 
