--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 -->
 <html>
 	<head>
+		<link rel="shortcut icon" type="image/ico" href="favicon.ico" />
 		<title>Michael</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"><link href="Styles/bootstrap-responsive.css" rel="stylesheet" type="text/css" />
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
