--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 				</header>
 				<ul class="icons">
 					<li><a href="mailto:zhang_michael@outlook.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-					<li><a href="https://www.github.com/mz-" class="icon fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="https://www.github.com/mz-" class="icon fa-github-alt"><span class="label">GitHub</span></a></li>
 					<li><a href="https://www.linkedin.com/profile/view?id=331287221" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
 					<li><a href="http://www.letterboxd.com/mz/" class="icon fa-film"><span class="label">Letterboxd</span></a></li>
 				</ul>
