--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,8 @@
 -->
 <html>
 	<head>
-		<title>Contact - Alpha by HTML5 UP</title>
+		<title>Contact</title>
+		<link rel="shortcut icon" type="image/ico" href="favicon.ico" />
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -57,8 +58,7 @@
 		<!-- Main -->
 			<section id="main" class="container small">
 				<header>
-					<h2>Contact Us</h2>
-					<p>Tell us what you think about our little operation.</p>
+					<h2>Email Me</h2>
 				</header>
 				<div class="box">
 					<form method="post" action="#">
@@ -92,7 +92,7 @@
 			</section>
 			
 		<!-- Footer -->
-			<footer id="footer">
+<!-- 			<footer id="footer">
 				<ul class="icons">
 					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
@@ -104,7 +104,7 @@
 				<ul class="copyright">
 					<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
-			</footer>
+			</footer> -->
 
 	</body>
 </html>
