--- a/resume.html
+++ b/resume.html
@@ -57,10 +57,10 @@
 
 		<!-- Main -->
 			<section id="main" class="container">
-				<header>
+<!-- 				<header>
 					<h3>Resume</h3>
-<!-- 					<p>A generic page for every non-generic situation.</p>
- -->				</header>
+					<p>A generic page for every non-generic situation.</p>
+				</header> -->
 				<div class="pdf">
 					<embed src="Michael_Zhang.pdf" width=850px height=1100px>
 					<!-- <span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
