--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 						<li>
 							<a href="" class="icon fa-angle-down">Layouts</a>
 							<ul>
-								<li><a href="generic.html">Generic</a></li>
+								<li><a href="resume.html">Resume</a></li>
 								<li><a href="contact.html">Contact</a></li>
 								<li><a href="elements.html">Elements</a></li>
 								<li>
