--- a/resume.html
+++ b/resume.html
@@ -61,8 +61,12 @@
 					<h3>Resume</h3>
 					<p>A generic page for every non-generic situation.</p>
 				</header> -->
-				<div class="pdf">
-					<embed src="Michael_Zhang.pdf" width=850px height=1100px>
+					<!-- <embed src="Michael_Zhang.pdf" width=850px height=1100px> -->
+					<object data="Michael_Zhang.pdf" type="application/pdf" width="100%" height=1100px>
+					  <p>Your web browser doesn't have a PDF plugin.
+					  Instead you can <a href="filename.pdf">click here to
+					  download the PDF file.</a></p>
+					</object>
 					<!-- <span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
 					<h3>This is a subheading</h3>
 					<p>Cep risus aliquam gravida cep ut lacus amet. Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae ante vestibulum ante. Blandit. Ante accumsan nisi eu placerat gravida placerat adipiscing in risus fusce vitae ac mi accumsan nunc in accumsan tempor blandit aliquet aliquet lobortis. Ultricies blandit lobortis praesent turpis. Adipiscing accumsan adipiscing adipiscing ac lacinia cep. Orci blandit a iaculis adipiscing ac. Vivamus ornare laoreet odio vis praesent nunc lorem mi. Erat. Tempus sem faucibus ac id. Vis in blandit. Nascetur ultricies blandit ac. Arcu aliquam. Accumsan mi eget adipiscing nulla. Non vestibulum ac interdum condimentum semper commodo massa arcu.</p>
@@ -76,7 +80,6 @@
 							<p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis praesent.</p>
 						</div>
 					</div> -->
-				</div>
 			</section>
 			
 		<!-- Footer -->
