--- a/resume.html
+++ b/resume.html
@@ -61,11 +61,10 @@
 					<h3>Resume</h3>
 					<p>A generic page for every non-generic situation.</p>
 				</header> -->
+				<div class="pdf">
 					<!-- <embed src="Michael_Zhang.pdf" width=850px height=1100px> -->
-					<object data="Michael_Zhang.pdf" type="application/pdf" width="100%" height=1100px>
-					  <p>Your web browser doesn't have a PDF plugin.
-					  Instead you can <a href="filename.pdf">click here to
-					  download the PDF file.</a></p>
+					<object data="Michael_Zhang.pdf" type="application/pdf" width=850px height=1100px>
+					  <p>Your browser doesn't support this plugin. Please <a href="Michael_Zhang.pdf">download the PDF file.</a></p>
 					</object>
 					<!-- <span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
 					<h3>This is a subheading</h3>
@@ -80,6 +79,7 @@
 							<p>Adipiscing faucibus nunc placerat. Tempus adipiscing turpis non blandit accumsan eget lacinia nunc integer interdum amet aliquam ut orci non col ut ut praesent. Semper amet interdum mi. Phasellus enim laoreet ac ac commodo faucibus faucibus. Curae lorem ipsum adipiscing ac. Vivamus ornare laoreet odio vis praesent.</p>
 						</div>
 					</div> -->
+				</div>
 			</section>
 			
 		<!-- Footer -->
