--- a/resume.html
+++ b/resume.html
@@ -64,7 +64,7 @@
 				<div class="pdf">
 					<!-- <embed src="Michael_Zhang.pdf" width=850px height=1100px> -->
 					<object data="Michael_Zhang.pdf" type="application/pdf" width=850px height=1100px>
-					  <p>Your browser doesn't support this plugin. Please <a href="Michael_Zhang.pdf">download the PDF file.</a></p>
+					  <p>Your browser doesn't support this plugin. <li><a href="Michael_Zhang.pdf" class="icon fa-cloud-download"></a></li></p>
 					</object>
 					<!-- <span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
 					<h3>This is a subheading</h3>
