--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 	<head>
 		<link rel="shortcut icon" type="image/ico" href="favicon.ico" />
 		<title>Michael</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0"><link href="Styles/bootstrap-responsive.css" rel="stylesheet" type="text/css" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<!-- <link href="Styles/bootstrap-responsive.css" rel="stylesheet" type="text/css" /> -->
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
+		<meta name="description" content="My personal website" />
+		<meta name="author" content="Michael Zhang" />
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery.dropotron.min.js"></script>
@@ -23,6 +24,8 @@
 			<link rel="stylesheet" href="css/skel.css" />
 			<link rel="stylesheet" href="css/style.css" />
 			<link rel="stylesheet" href="css/style-wide.css" />
+			<link href="owl-carousel/owl.carousel.css" rel="stylesheet">
+    		<link href="owl-carousel/owl.theme.css" rel="stylesheet">
 		</noscript>
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 	</head>
@@ -164,14 +167,14 @@
 			<div class = "view">
 				<div class="carousel horizontal">
 				    <div class="items">
-				        <a href="images/p (1).jpg"><img class="item" src="images/p (1).jpg" width="300"/>
-				        <a href="images/p (2).jpg"><img class="item" src="images/p (2).jpg" width="300"/>
-				        <a href="images/p (3).jpg"><img class="item" src="images/p (3).jpg" width="300"/>
-				        <a href="images/p (5).jpg"><img class="item" src="images/p (5).jpg" width="300"/>
-				        <a href="images/p (6).jpg"><img class="item" src="images/p (6).jpg" width="300"/>
-				        <a href="images/p (7).jpg"><img class="item" src="images/p (7).jpg" width="300"/>
-				        <a href="images/p (8).jpg"><img class="item" src="images/p (8).jpg" width="300"/>
-				        <a href="images/p (9).jpg"><img class="item" src="images/p (9).jpg" width="300"/>
+				        <img class="lazy" data-original="images/p (1).jpg" width="300"/>
+				        <img class="lazy" data-original="images/p (2).jpg" width="300"/>
+				        <img class="lazy" data-original="images/p (3).jpg" width="300"/>
+				        <img class="lazy" data-original="images/p (5).jpg" width="300"/>
+				        <img class="lazy" data-original="images/p (6).jpg" width="300"/>
+				        <img class="lazy" data-original="images/p (7).jpg" width="300"/>
+				        <img class="lazy" data-original="images/p (8).jpg" width="300"/>
+				        <img class="lazy" data-original="images/p (9).jpg" width="300"/>
 				     </div>
 				</div>
 			</div>
@@ -190,6 +193,21 @@
 				</ul>
 
 			</section>
+
+		<script src="js/jquery.lazyload.min.js" type="text/javascript"></script>
+		<script type="text/javascript" charset="utf-8">
+		jQuery(document).ready(function ($) {
+    		$("img.lazy").lazyload(
+        		{ data_attribute: "original" 
+        		});
+		});
+		$(function() {
+    		$("img.test").lazyload({
+    			threshold : 100
+    		});
+    			
+		});
+		</script>
 
 	</body>
 </html>
