--- a/resume.html
+++ b/resume.html
@@ -63,8 +63,9 @@
 				</header> -->
 				<div class="pdf">
 					<!-- <embed src="Michael_Zhang.pdf" width=850px height=1100px> -->
-					<object data="Michael_Zhang.pdf" type="application/pdf" width=850px height=1100px>
-					  <h3>Your browser doesn't support this plugin. <a href="Michael_Zhang.pdf" class="icon fa-cloud-download"></a></h3>
+					<object data="Michael_Zhang.pdf" type="application/pdf" width="100%" height="100%">
+					  <h1>Your browser doesn't support this plugin. </h1>
+					  <a href="Michael_Zhang.pdf" class="icon fa-cloud-download"></a>
 					</object>
 					<!-- <span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
 					<h3>This is a subheading</h3>
