reduced load times

--- a/index.html
+++ b/index.html
@@ -167,14 +167,14 @@
 			<div class = "view">
 				<div class="carousel horizontal">
 				    <div class="items">
-				        <img class="lazy" data-original="images/p (1).jpg" width="300"/>
-				        <img class="lazy" data-original="images/p (2).jpg" width="300"/>
-				        <img class="lazy" data-original="images/p (3).jpg" width="300"/>
-				        <img class="lazy" data-original="images/p (5).jpg" width="300"/>
-				        <img class="lazy" data-original="images/p (6).jpg" width="300"/>
-				        <img class="lazy" data-original="images/p (7).jpg" width="300"/>
-				        <img class="lazy" data-original="images/p (8).jpg" width="300"/>
-				        <img class="lazy" data-original="images/p (9).jpg" width="300"/>
+				        <a href="images/p (1).jpg"><img class="item" src="images/p_1.jpg" width="300"/></a>
+				        <a href="images/p (2).jpg"><img class="item" src="images/p_2.jpg" width="300"/></a>
+				        <a href="images/p (3).jpg"><img class="item" src="images/p_3.jpg" width="300"/></a>
+				        <a href="images/p (5).jpg"><img class="item" src="images/p_5.jpg" width="300"/></a>
+				        <a href="images/p (6).jpg"><img class="item" src="images/p_6.jpg" width="300"/></a>
+				        <a href="images/p (7).jpg"><img class="item" src="images/p_7.jpg" width="300"/></a>
+				        <a href="images/p (8).jpg"><img class="item" src="images/p_8.jpg" width="300"/></a>
+				        <a href="images/p (9).jpg"><img class="item" src="images/p_9.jpg" width="300"/></a>
 				     </div>
 				</div>
 			</div>
