quality of life fixes

--- a/index.html
+++ b/index.html
@@ -167,14 +167,14 @@
 			<div class = "view">
 				<div class="carousel horizontal">
 				    <div class="items">
-				        <a href="images/p (1).jpg"><img class="item" src="images/p_1.jpg" width="300"/></a>
-				        <a href="images/p (2).jpg"><img class="item" src="images/p_2.jpg" width="300"/></a>
-				        <a href="images/p (3).jpg"><img class="item" src="images/p_3.jpg" width="300"/></a>
-				        <a href="images/p (5).jpg"><img class="item" src="images/p_5.jpg" width="300"/></a>
-				        <a href="images/p (6).jpg"><img class="item" src="images/p_6.jpg" width="300"/></a>
-				        <a href="images/p (7).jpg"><img class="item" src="images/p_7.jpg" width="300"/></a>
-				        <a href="images/p (8).jpg"><img class="item" src="images/p_8.jpg" width="300"/></a>
-				        <a href="images/p (9).jpg"><img class="item" src="images/p_9.jpg" width="300"/></a>
+				        <a href="images/p (1).jpg" target="_blank"><img class="item" src="images/p_1.jpg" width="300"/></a>
+				        <a href="images/p (2).jpg" target="_blank"><img class="item" src="images/p_2.jpg" width="300"/></a>
+				        <a href="images/p (3).jpg" target="_blank"><img class="item" src="images/p_3.jpg" width="300"/></a>
+				        <a href="images/p (5).jpg" target="_blank"><img class="item" src="images/p_5.jpg" width="300"/></a>
+				        <a href="images/p (6).jpg" target="_blank"><img class="item" src="images/p_6.jpg" width="300"/></a>
+				        <a href="images/p (7).jpg" target="_blank"><img class="item" src="images/p_7.jpg" width="300"/></a>
+				        <a href="images/p (8).jpg" target="_blank"><img class="item" src="images/p_8.jpg" width="300"/></a>
+				        <a href="images/p (9).jpg" target="_blank"><img class="item" src="images/p_9.jpg" width="300"/></a>
 				     </div>
 				</div>
 			</div>
@@ -186,10 +186,10 @@
 					<h1>Find me online</h1>
 				</header>
 				<ul class="icons">
-					<li><a href="mailto:zhang_michael@outlook.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-					<li><a href="https://www.github.com/mz-" class="icon fa-github-alt"><span class="label">GitHub</span></a></li>
-					<li><a href="https://www.linkedin.com/profile/view?id=331287221" class="icon fa-linkedin-square"><span class="label">LinkedIn</span></a></li>
-					<li><a href="http://www.letterboxd.com/mz/" class="icon fa-film"><span class="label">Letterboxd</span></a></li>
+					<li><a href="mailto:zhang_michael@outlook.com" class="icon fa-envelope-o" ><span class="label">Email</span></a></li>
+					<li><a href="https://www.github.com/mz-" class="icon fa-github-alt" target="_blank"><span class="label">GitHub</span></a></li>
+					<li><a href="https://www.linkedin.com/profile/view?id=331287221" class="icon fa-linkedin-square" target="_blank"><span class="label">LinkedIn</span></a></li>
+					<li><a href="http://www.letterboxd.com/mz/" class="icon fa-film" target="_blank"><span class="label">Letterboxd</span></a></li>
 				</ul>
 
 			</section>
