--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 						<section>
 							<span class="icon major fa-paper-plane-o accent5"></span>
 							<ul class="actions">
-								<li><a href="Michael_Zhang.pdf" class="button alt">Resume</a></li>
+								<li><a href="Michael_Zhang.pdf" class="button alt" target="_blank">Resume</a></li>
 							</ul>
 						</section>
 
