--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 						<section>
 							<span class="icon major fa-code-fork accent2"></span>
 							<h3>Skills</h3>
-							<p>Python, Java, C, Scheme, Scala, MIPS, Autodesk Inventor</p>
+							<p>Python, Java, C, Scheme, Scala, MIPS, Apache Spark, Autodesk Inventor</p>
 						</section>
 						<section>
 							<span class="icon major fa-cloud accent4"></span>
