--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 	<body class="landing">
 
 		<!-- Header -->
-<!-- 			<header id="header" class="alt">
- 				<h1><a href="index.html">Alpha</a> by HTML5 UP</h1>		
+			<header id="header" class="alt">
+ 				<h1><a href="index.html">Home</a></h1>		
 				<nav id="nav">
 					<ul>
-						<li><a href="index.html">Home</a></li>
+						<!-- <li><a href="index.html">Home</a></li>
 						<li>
 							<a href="" class="icon fa-angle-down">Layouts</a>
 							<ul>
@@ -53,11 +53,15 @@
 									</ul>
 								</li>
 							</ul>
-						</li>
-						<li><a href="#" class="button">Sign Up</a></li>
+						</li> -->
+						<!-- <li><a href="#" class="button">Sign Up</a></li> -->
+						<li><a href="mailto:zhang_michael@outlook.com" class="icon fa-envelope-o" ><span class="label">Email</span></a></li>
+						<li><a href="https://www.github.com/mz-" class="icon fa-github-alt" target="_blank"><span class="label">GitHub</span></a></li>
 					</ul>
 				</nav>
-			</header> -->
+			</header>
+
+
 
 		<!-- Banner -->
 			<section id="banner">
