--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 						<section>
 							<span class="icon major fa-cloud accent4"></span>
 							<h3>Projects</h3>
-							<p>Depth map generator, Huffman encoding compression script for text files and file directories, run-length image compression program, Tweet parser and analyzer, depth first search puzzle solver, Scheme interpreter, and more</p>
+							<p>Depth map generator, Huffman encoding compression script for text files and file directories, run-length image compression program, Tweet parser and analyzer, MapReduce puzzle solver, Scheme interpreter, and more</p>
 						</section>
 					</div>
 					<div class="features-row">
