--- a/resume.html
+++ b/resume.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Alpha by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Resume</title>
@@ -29,28 +24,9 @@
 
 		<!-- Header -->
 			<header id="header" class="skel-layers-fixed">
-<!-- 				<h1><a href="index.html">Michael</a> Zhang</h1>
- -->				<nav id="nav">
+				<nav id="nav">
 					<ul>
 						<li><a href="index.html" class="icon fa-anchor">Home</a></li>
-						<!-- <li>
-							<a href="" class="icon fa-angle-down">Layouts</a>
-							<ul>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="contact.html">Contact</a></li>
-								<li><a href="elements.html">Elements</a></li>
-								<li>
-									<a href="">Submenu</a>
-									<ul>
-										<li><a href="#">Option One</a></li>
-										<li><a href="#">Option Two</a></li>
-										<li><a href="#">Option Three</a></li>
-										<li><a href="#">Option Four</a></li>
-									</ul>
-								</li>
-							</ul>
-						</li>
-						<li><a href="#" class="button">Sign Up</a></li> -->
 					</ul>
 				</nav>
 			</header>
