--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
- 				<h1><a href="michaelzhang.io" STYLE="text-decoration: none">Home</a></h1>		
+ 				<h1><a href="index.html" STYLE="text-decoration: none">Home</a></h1>		
 				<nav id="nav">
 					<ul>
 						<!-- <li><a href="index.html">Home</a></li>
