--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
 					<ul>
 						<!-- <li><a href="index.html">Home</a></li>
 						<li>
-							<a href="" class="icon fa-angle-down">Layouts</a>
+							<a href="" class="icon fa-github-alt"></a>
 							<ul>
+
 								<li><a href="resume.html">Resume</a></li>
 								<li><a href="contact.html">Contact</a></li>
 								<li><a href="elements.html">Elements</a></li>
@@ -60,8 +61,8 @@
 							</ul>
 						</li> -->
 						<!-- <li><a href="#" class="button">Sign Up</a></li> -->
-						<li><a href="mailto:zhang_michael@outlook.com" class="icon fa-envelope-o" ><span class="label">Email</span></a></li>
-						<li><a href="https://www.github.com/mz-" class="icon fa-github-alt" target="_blank"><span class="label">GitHub</span></a></li>
+						<li><a href="mailto:zhang_michael@outlook.com" class="icon fa-envelope-o" ><span class="label">Email</span>Email</a></li>
+						<li><a href="https://www.github.com/mz-" class="icon fa-github-alt" target="_blank"><span class="label">GitHub</span>Github</a></li>
 					</ul>
 				</nav>
 			</header>
