--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 							</ul>
 						</li> -->
 						<!-- <li><a href="#" class="button">Sign Up</a></li> -->
-						<li><a href="mailto:zhang_michael@outlook.com" class="icon fa-envelope-o" ><span class="label">Email</span>Email</a></li>
-						<li><a href="https://www.github.com/mz-" class="icon fa-github-alt" target="_blank"><span class="label">GitHub</span>Github</a></li>
+						<li><a href="mailto:zhang_michael@outlook.com" class="icon fa-envelope-o" >Email</a></li>
+						<li><a href="https://www.github.com/mz-" class="icon fa-github-alt" target="_blank">Github</a></li>
 					</ul>
 				</nav>
 			</header>
