--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 		  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
 		  ga('create', 'UA-56323902-1', 'auto');
+		  ga('require', 'displayfeatures');
 		  ga('send', 'pageview');
 		</script>
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
