--- a/index.html
+++ b/index.html
@@ -78,6 +78,15 @@
 					<li><a href="#" class="button special">Sign Up</a></li>
 					<li><a href="#" class="button">Learn More</a></li>
 				</ul> -->
+				<div class="accordion">
+				    <div class="accordion-section">
+			        <a class="accordion-section-title" href="#aboutme">About Me</a>
+			   				<div id="aboutme" class="accordion-section-content">
+			   					<p>I was born in Syracuse, New York and raised in Barrington, a town near Chicago. Apart from being a student in the Bay Area, I'm a film enthusiast and I code whenever I can.</p>
+			   				</div>
+			   			</div>
+			   		</div>
+
 			</section>
 
 		<!-- Main -->
