new look, fixed mobile site

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
- 				<h1><a href="index.html" STYLE="text-decoration: none">Home</a></h1>		
+ 				<h1><a href="index.html" STYLE="text-decoration: none" class="link">Home</a></h1>		
 				<nav id="nav">
 					<ul>
 						<!-- <li><a href="index.html">Home</a></li>
@@ -82,7 +82,7 @@
 				    <div class="accordion-section">
 			        <a class="accordion-section-title" href="#aboutme">About Me</a>
 			   				<div id="aboutme" class="accordion-section-content">
-			   					<p>I was born in Syracuse, New York and raised in Barrington, a town near Chicago. Apart from being a student in the Bay Area, I'm a film enthusiast and I code whenever I can.</p>
+			   					<p>Hi, my name is Michael. I was born in Syracuse, New York and raised in Barrington, a small town near Chicago. Apart from being a student in the Bay Area, I'm a film enthusiast and I code whenever I can.</p>
 			   				</div>
 			   			</div>
 			   		</div>
@@ -103,24 +103,24 @@
 				<section class="box special features">
 					<div class="features-row">
 						<section>
-							<span class="icon major fa-code-fork accent2"></span>
+							<span class="icon major fa-code-fork accent1"></span>
 							<h3>Skills</h3>
 							<p>Python, Java, C, Scheme, Scala, MIPS, Apache Spark, Autodesk Inventor</p>
 						</section>
 						<section>
-							<span class="icon major fa-cloud accent4"></span>
+							<span class="icon major fa-cloud accent2"></span>
 							<h3>Projects</h3>
 							<p>Depth map generator, Huffman encoding compression script for text files and file directories, run-length image compression program, Tweet parser and analyzer, MapReduce puzzle solver, Scheme interpreter, and more</p>
 						</section>
 					</div>
 					<div class="features-row">
 						<section>
-							<span class="icon major fa-paw accent1"></span>
+							<span class="icon major fa-paw accent3"></span>
 							<h3>Institution</h3>
 							<p>University of California, Berkeley class of 2017</p>
 						</section>
 						<section>
-							<span class="icon major fa-paper-plane-o accent5"></span>
+							<span class="icon major fa-paper-plane-o accent4"></span>
 							<ul class="actions">
 								<li><a href="Michael_Zhang.pdf" class="button alt" target="_blank" STYLE="text-decoration: none">Resume</a></li>
 							</ul>
@@ -211,10 +211,10 @@
 										<div>
 											<img data-lazy="images/carousel/p_8.jpg"/>
 										</div>
-									
+										<!-- <button type="button" data-role="none" class="slick-prev" style="display: block;">Previous</button>
+										<button type="button" data-role="none" class="slick-next" style="display: block;">Next</button> -->
 									</div>
-										<button type="button" data-role="none" class="slick-prev" style="display: block;">Previous</button>
-										<button type="button" data-role="none" class="slick-next" style="display: block;">Next</button>
+										
 				    				</div> <!--end of content-->
 
 				</div>
