theme color support for Chrome on Lollipop

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="My personal website" />
 		<meta name="author" content="Michael Zhang" />
+		<meta name="theme-color" content="#F44336"/>
 
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery.dropotron.min.js"></script>
