--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		<!-- Banner -->
 			<section id="banner">
 				<h2>Michael Zhang</h2>
-				<h6>Berkeley Computer Science and Math</h6>
+				<h6>Berkeley computer science student</h6>
 <!-- 				<ul class="actions">
 					<li><a href="#" class="button special">Sign Up</a></li>
 					<li><a href="#" class="button">Learn More</a></li>
