--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 						<section>
 							<span class="icon major fa-cloud accent2"></span>
 							<h3>Projects</h3>
-							<p>Clutter (an Android app), processor design, depth map generator, Huffman encoding compression script, Tweet parser and sentiment analyzer, MapReduce puzzle solver, Scheme interpreter, and more</p>
+							<p>Clutter (an Android app), processor design, depth map generator, Huffman encoding compression program, Tweet parser and sentiment analyzer, MapReduce puzzle solver, Scheme interpreter, and more</p>
 						</section>
 					</div>
 					<div class="features-row">
