--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				    <div class="accordion-section">
 			        <a class="accordion-section-title" href="#aboutme">About Me</a>
 			   				<div id="aboutme" class="accordion-section-content">
-			   					<p>Hi, my name is Michael. I was born in Syracuse, New York and raised in Barrington, a small town near Chicago. Apart from being a student in the Bay Area, I'm a film enthusiast and I code whenever I can.</p>
+			   					<p>Hi, my name is Michael. I was born in Syracuse, New York and raised in Barrington, a small town near Chicago. I'm a student in the Bay Area, a film enthusiast, and a big fan of the world's newest technologies.</p>
 			   				</div>
 			   			</div>
 			   		</div>
